--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,3 @@
-header {
-  height: 100vh;
-  width: 100vw;
-  background-color: #1abc9c;
-  padding-top: 15rem;
-}
-
-h1 {
-  text-align: center;
-  font-size: 5rem;
-  letter-spacing: .2rem;
-  color: #2c3e50;
-}
-
-h3 {
-  text-align: center;
-  font-size: 2.5rem;
-  letter-spacing: .2rem;
-  margin-top: 8rem;
-  color: #2c3e50;
+body {
+  font-family: 'Maven Pro', 'Poppins';
 }
