--- a/src/components/main/main.styles.scss
+++ b/src/components/main/main.styles.scss
@@ -1,10 +1,11 @@
 .main-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
   width: 75vw;
   margin: auto;
-  margin-top: 8rem;
+  margin-top: 7rem;
   // border: 2px solid white;
 
   .intro-container {
@@ -15,35 +16,169 @@
       margin-bottom: 1.5rem;
     }
 
-    & h1,
-    h2 {
+    & h1 {
       color: white;
       font-size: 10.5rem;
       font-weight: 800;
     }
 
     & h2 {
+      font-size: 9rem;
+      font-weight: 800;
       color: #f1ff77;
-      // opacity: 0.8;
     }
-  }
 
-  img {
-    width: 38rem;
-    height: 25rem;
-    opacity: 0.7;
-  }
-
-  .title-container {
-    width: 100%;
-
-    margin-top: 2rem;
-
-    h1 {
+    h4 {
       font-size: 3rem;
       font-weight: 500;
       color: #d9f3a9;
       opacity: 0.9;
+      margin-top: 2rem;
+    }
+  }
+
+  img {
+    width: 45rem;
+    height: 35rem;
+    opacity: 0.7;
+  }
+}
+
+// Responsive styles
+@media screen and (max-width: 1850px) {
+  .main-container {
+    .intro-container {
+      & h3 {
+        font-size: 2rem;
+      }
+
+      & h1 {
+        font-size: 9rem;
+      }
+
+      & h2 {
+        font-size: 8rem;
+      }
+
+      h4 {
+        font-size: 2.5rem;
+      }
+    }
+
+    img {
+      width: 40rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1650px) {
+  .main-container {
+    .intro-container {
+      & h3 {
+        font-size: 2rem;
+      }
+
+      & h1 {
+        font-size: 7.5rem;
+      }
+
+      & h2 {
+        font-size: 7.5rem;
+      }
+
+      h4 {
+        font-size: 2.5rem;
+      }
+    }
+
+    img {
+      width: 35rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1550px) {
+  .main-container {
+    .intro-container {
+      & h3 {
+        font-size: 2rem;
+      }
+
+      & h1 {
+        font-size: 7rem;
+      }
+
+      & h2 {
+        font-size: 7rem;
+      }
+
+      h4 {
+        font-size: 2.5rem;
+      }
+    }
+
+    img {
+      width: 32rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  .main-container {
+    .intro-container {
+      & h3 {
+        font-size: 2rem;
+      }
+
+      & h1 {
+        font-size: 6.5rem;
+      }
+
+      & h2 {
+        font-size: 6.5rem;
+      }
+
+      h4 {
+        font-size: 2rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .main-container {
+    img {
+      width: 28rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  .main-container {
+    .intro-container {
+      & h3 {
+        font-size: 1.8rem;
+      }
+
+      & h1 {
+        font-size: 5.8rem;
+      }
+
+      & h2 {
+        font-size: 5.8rem;
+      }
+
+      h4 {
+        font-size: 1.8rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .main-container {
+    img {
+      width: 24rem;
     }
   }
 }
