--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -1,68 +1,73 @@
-.ham-container {
-  display: flex;
-  justify-content: flex-end;
-  width: 75vw;
-  margin: auto;
-  padding-top: 4rem;
+@import '../../_Global_Styles/colors';
 
-  .hamburger {
-    z-index: 2;
-    &:hover {
-      cursor: pointer;
+nav {
+  padding: 2rem 2rem 0 0;
+  background-color: $homepagecolor;
+  .ham-container {
+    display: flex;
+    justify-content: flex-end;
+    margin: auto;
+
+    .hamburger {
+      z-index: 3;
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
-}
 
-.nav-links {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-left: auto;
-  position: fixed;
-  top: 0;
-  list-style: none;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(121, 112, 248, 0.76);
-  clip-path: circle(100px at 90% -12%);
-  -webkit-clip-path: circle(100px at 90% -12%);
-  transition: all 1s ease-out;
-  pointer-events: none;
+  .nav-links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: auto;
+    position: fixed;
+    top: -25px;
+    list-style: none;
+    width: 100%;
+    height: calc(100vh + 25px);
+    background-color: rgba(255, 255, 255, 0.911);
+    clip-path: circle(100px at 90% -12%);
+    -webkit-clip-path: circle(100px at 90% -12%);
+    transition: all 1s ease-out;
+    pointer-events: none;
+    z-index: 1;
 
-  &.open {
-    clip-path: circle(2200px at 90% -12%);
-    -webkit-clip-path: circle(2200px at 90% -12%);
-    pointer-events: all;
-  }
+    &.open {
+      clip-path: circle(2200px at 90% -12%);
+      -webkit-clip-path: circle(2200px at 90% -12%);
+      pointer-events: all;
+    }
 
-  li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 3.5rem;
-  }
+    li a {
+      color: #1b3fdd;
+      text-decoration: none;
+      font-size: 3.5rem;
+    }
 
-  li {
-    opacity: 0;
-  }
+    li {
+      opacity: 0;
+    }
 
-  li:nth-child(1) {
-    transition: all 0.5s ease-in-out 0.18s;
-  }
+    li:nth-child(1) {
+      transition: all 0.5s ease-in-out 0.18s;
+    }
 
-  li:nth-child(2) {
-    transition: all 0.5s ease-in-out 0.28s;
-  }
+    li:nth-child(2) {
+      transition: all 0.5s ease-in-out 0.28s;
+    }
 
-  li:nth-child(3) {
-    transition: all 0.5s ease-in-out 0.38s;
-  }
+    li:nth-child(3) {
+      transition: all 0.5s ease-in-out 0.38s;
+    }
 
-  li:nth-child(4) {
-    transition: all 0.5s ease-in-out 0.48s;
-  }
+    li:nth-child(4) {
+      transition: all 0.5s ease-in-out 0.48s;
+    }
 
-  li.fade {
-    opacity: 1;
+    li.fade {
+      opacity: 1;
+    }
   }
 }
