--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -1,52 +1,50 @@
 @import '../../_Global_Styles/colors';
 
 nav {
-  padding: 2rem 2rem 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+  height: 10vh;
+  padding: 1rem 2rem 0 2rem;
   background-color: $homepagecolor;
-  .ham-container {
-    display: flex;
-    justify-content: flex-end;
-    margin: auto;
 
-    .hamburger {
-      z-index: 3;
-      &:hover {
-        cursor: pointer;
-      }
-    }
+  .hamburger {
+    z-index: 2;
   }
 
   .nav-links {
+    width: 100vw;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    margin-left: auto;
-    position: fixed;
-    top: -35px;
+    justify-content: space-evenly;
     list-style: none;
-    width: 100%;
-    height: calc(100vh + 35px);
-    background-color: rgba(255, 255, 255, 0.911);
-    clip-path: circle(100px at 90% -12%);
-    -webkit-clip-path: circle(100px at 90% -12%);
-    transition: all 1s ease-out;
-    pointer-events: none;
+    background-color: rgba(255, 255, 255, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1;
+    clip-path: circle(100px at 90% -20%);
+    transition: all 1s ease-in;
 
     &.open {
       clip-path: circle(2200px at 90% -12%);
-      -webkit-clip-path: circle(2200px at 90% -12%);
-      pointer-events: all;
     }
 
     li a {
-      color: #1b3fdd;
+      color: $homepagecolor;
       text-decoration: none;
-      font-size: 3.5rem;
+      font-size: 1.5rem;
     }
 
     li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 9rem;
+      height: 3rem;
       opacity: 0;
     }
 
