--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -8,7 +8,7 @@ nav {
   height: 10vh;
   padding: 1rem 2rem 0 2rem;
   background-color: $homepagecolor;
-
+  
   .nav-links {
     width: 100vw;
     height: 100%;
@@ -23,7 +23,7 @@ nav {
     left: 0;
     z-index: 1;
     clip-path: circle(100px at 90% -20%);
-    transition: all 1s ease;
+    transition: all .8s ease-in;
 
     &.open {
       clip-path: circle(2200px at 90% -12%);
