--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -65,10 +65,40 @@ main {
   }
 }
 
-@media screen and (min-width: 575px) {
+@media screen and (min-width: 460px) {
+  main {
+    .intro-container {
+      h4 {
+        font-size: 1.8em;
+      }
+
+      .name {
+        h1,
+        h2 {
+          font-size: 5.5em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 560px) {
   main {
     display: flex;
     justify-content: space-between;
+
+    .intro-container {
+      h4 {
+        font-size: 1.4em;
+      }
+
+      .name {
+        h1,
+        h2 {
+          font-size: 5em;
+        }
+      }
+    }
 
     .image-container {
       display: flex;
@@ -83,6 +113,19 @@ main {
 
 @media screen and (min-width: 640px) {
   main {
+    .intro-container {
+      h4 {
+        font-size: 1.6em;
+      }
+
+      .name {
+        h1,
+        h2 {
+          font-size: 5.2em;
+        }
+      }
+    }
+
     .image-container {
       img {
         width: 18rem;
@@ -96,6 +139,54 @@ main {
     .image-container {
       img {
         width: 22rem;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 800px) {
+  header {
+    padding: $tabletpadding;
+  }
+
+  main {
+    .image-container {
+      img {
+        width: 25rem;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 880px) {
+  main {
+    .intro-container {
+      h4 {
+        font-size: 1.8em;
+      }
+
+      .name {
+        h1,
+        h2 {
+          font-size: 6em;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 940px) {
+  main {
+    .intro-container {
+      h4 {
+        font-size: 2em;
+      }
+
+      .name {
+        h1,
+        h2 {
+          font-size: 6.4em;
+        }
       }
     }
   }
