--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,78 +5,75 @@ header {
   background-color: $appcolor;
   clip-path: polygon(100% 0, 100% 84%, 0 100%, 0 0);
   padding: $mobilepadding;
-  // border: 4px solid greenyellow;
+  main {
+    padding-top: 5rem;
+  }
 }
 
-main {
-  // border: 4px solid tomato;
-  padding-top: 5rem;
-  .intro-container {
-    // border: 4px solid white;
-    h3,
-    h4 {
-      color: #fff;
-      font-size: 1.2em;
-      margin-bottom: 0.5em;
-      opacity: 0.9;
-    }
-
-    h4 {
-      font-size: 1.4em;
-      margin-top: 0.5em;
-    }
-
-    .name {
-      h1,
-      h2 {
-        color: #fff;
-        font-size: 4.5em;
-        font-weight: 800;
-      }
-
-      h2 {
-        color: #f1ff73;
-      }
-    }
+.intro-container {
+  h3,
+  h4 {
+    color: #fff;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
+    opacity: 0.9;
   }
 
-  .image-container {
-    img {
-      display: none;
+  h4 {
+    font-size: 1.4em;
+    margin-top: 0.5em;
+  }
+
+  .name {
+    h1,
+    h2 {
+      color: #fff;
+      font-size: 4.5em;
+      font-weight: 800;
     }
+
+    h2 {
+      color: #f1ff73;
+    }
+  }
+}
+
+.image-container {
+  img {
+    display: none;
   }
 }
 
 // Responsive styles
 @media screen and (min-width: 360px) {
-  main {
-    .intro-container {
-      h4 {
-        font-size: 1.6em;
-      }
+  .intro-container {
+    h4 {
+      font-size: 1.6em;
+    }
 
-      .name {
-        h1,
-        h2 {
-          font-size: 5em;
-        }
+    .name {
+      h1,
+      h2 {
+        font-size: 5em;
       }
     }
   }
 }
 
 @media screen and (min-width: 460px) {
-  main {
-    .intro-container {
-      h4 {
-        font-size: 1.8em;
-      }
+  header {
+    min-height: 40rem;
+  }
 
-      .name {
-        h1,
-        h2 {
-          font-size: 5.5em;
-        }
+  .intro-container {
+    h4 {
+      font-size: 1.8em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 5.5em;
       }
     }
   }
@@ -86,108 +83,262 @@ main {
   main {
     display: flex;
     justify-content: space-between;
+  }
 
-    .intro-container {
-      h4 {
-        font-size: 1.4em;
-      }
-
-      .name {
-        h1,
-        h2 {
-          font-size: 5em;
-        }
-      }
+  .intro-container {
+    h4 {
+      font-size: 1.4em;
     }
 
-    .image-container {
-      display: flex;
-      align-items: center;
-      img {
-        display: block;
-        width: 15rem;
+    .name {
+      h1,
+      h2 {
+        font-size: 5em;
       }
+    }
+  }
+
+  .image-container {
+    margin-top: 5rem;
+
+    img {
+      display: block;
+      width: 15rem;
     }
   }
 }
 
-@media screen and (min-width: 640px) {
-  main {
-    .intro-container {
-      h4 {
-        font-size: 1.6em;
-      }
-
-      .name {
-        h1,
-        h2 {
-          font-size: 5.2em;
-        }
-      }
+@media screen and (min-width: 620px) {
+  .intro-container {
+    h4 {
+      font-size: 1.6em;
     }
 
-    .image-container {
-      img {
-        width: 18rem;
+    .name {
+      h1,
+      h2 {
+        font-size: 5.2em;
       }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 18rem;
     }
   }
 }
 
 @media screen and (min-width: 720px) {
-  main {
-    .image-container {
-      img {
-        width: 22rem;
-      }
+  .image-container {
+    img {
+      width: 23rem;
     }
   }
 }
 
-@media screen and (min-width: 800px) {
-  header {
-    padding: $tabletpadding;
+@media screen and (min-width: 820px) {
+  .intro-container {
+    h4 {
+      font-size: 1.4em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 5em;
+      }
+    }
   }
 
-  main {
-    .image-container {
-      img {
-        width: 25rem;
-      }
+  .image-container {
+    img {
+      width: 25rem;
     }
   }
 }
 
 @media screen and (min-width: 880px) {
-  main {
-    .intro-container {
-      h4 {
-        font-size: 1.8em;
-      }
+  header {
+    min-height: 45rem;
+    padding: $tabletpadding;
+  }
 
-      .name {
-        h1,
-        h2 {
-          font-size: 6em;
-        }
+  .intro-container {
+    h4 {
+      font-size: 1.8em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 6em;
       }
     }
   }
 }
 
 @media screen and (min-width: 940px) {
-  main {
-    .intro-container {
-      h4 {
-        font-size: 2em;
-      }
+  header {
+    min-height: 44rem;
+  }
 
-      .name {
-        h1,
-        h2 {
-          font-size: 6.4em;
-        }
+  .intro-container {
+    h3 {
+      font-size: 1.4em;
+    }
+
+    h4 {
+      font-size: 2em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 6.4em;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  header {
+    min-height: 48rem;
+  }
+
+  .intro-container {
+    h4 {
+      font-size: 2em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 7em;
+      }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 28rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .intro-container {
+    h4 {
+      font-size: 2.2em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 7.2em;
+      }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 30rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1240px) {
+  .intro-container {
+    h3 {
+      font-size: 1.6em;
+    }
+
+    h4 {
+      font-size: 2em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 7em;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  header {
+    padding: $desktoppadding;
+  }
+}
+
+@media screen and (min-width: 1420px) {
+  .intro-container {
+    h4 {
+      font-size: 2.5em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 7.5em;
+      }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 34rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1520px) {
+  header {
+    min-height: 56rem;
+  }
+
+  .intro-container {
+    h4 {
+      font-size: 2.6em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 8em;
+      }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 40rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1740px) {
+  .intro-container {
+    h3 {
+      font-size: 1.8em;
+    }
+
+    h4 {
+      font-size: 3em;
+    }
+
+    .name {
+      h1,
+      h2 {
+        font-size: 8.4em;
+      }
+    }
+  }
+
+  .image-container {
+    img {
+      width: 44rem;
     }
   }
 }
