--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -3,11 +3,14 @@
 nav {
   width: 100%;
   height: 5rem;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   padding: $mobilepadding;
+  z-index: 5;
 
   .nav-links {
     width: 100vw;
