change font size and add title

--- a/src/_Global_Styles/_variables.scss
+++ b/src/_Global_Styles/_variables.scss
@@ -5,4 +5,4 @@ $menucolor: rgba(255, 255, 255, 0.9);
 // Padding Values
 $mobilepadding: 0 2rem;
 $tabletpadding: 0 4rem;
-$desktoppadding: 0 8rem 0 12rem;
+$desktoppadding: 0 10rem;
