--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -65,7 +65,7 @@ main {
   }
 }
 
-@media screen and (max-width: 1480px) {
+@media screen and (max-width: 1560px) {
   main {
     padding-top: 11rem;
   }
@@ -74,8 +74,8 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 380px;
-    height: 380px;
+    width: 350px;
+    height: 350px;
     position: absolute;
     top: 15%;
     right: 10%;
@@ -84,8 +84,139 @@ main {
     z-index: 1;
 
     img {
-      width: 300px;
-      height: 300px;
+      width: calc(100% - 80px);
+      height: calc(100% - 80px);
+    }
+  }
+}
+
+@media screen and (max-width: 1360px) {
+  main {
+    padding-top: 15rem;
+  }
+
+  .text-container {
+    h3 {
+      font-size: 2.2em;
+    }
+
+    h1 {
+      font-size: 8em;
+    }
+
+    span {
+      display: block;
+    }
+
+    h4 {
+      font-size: 2.4em;
+    }
+  }
+
+  .image-container {
+    width: 340px;
+    height: 340px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  main {
+    padding-top: 15rem;
+  }
+
+  .text-container {
+    h3 {
+      font-size: 1.8em;
+    }
+
+    h1 {
+      font-size: 7.6em;
+    }
+
+    span {
+      display: block;
+    }
+
+    h4 {
+      font-size: 2em;
+    }
+  }
+
+  .image-container {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .image-container {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .image-container {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  main {
+    padding-top: 10rem;
+  }
+
+  .text-container {
+    h3 {
+      font-size: 1.6em;
+    }
+
+    h1 {
+      font-size: 7.2em;
+    }
+
+    h4 {
+      font-size: 1.6em;
+    }
+  }
+}
+
+@media screen and (max-width: 490px) {
+  main {
+    padding-top: 8rem;
+  }
+
+  .text-container {
+    h3 {
+      font-size: 1.3em;
+    }
+
+    h1 {
+      font-size: 6em;
+    }
+
+    h4 {
+      font-size: 1.3em;
+    }
+  }
+}
+
+@media screen and (max-width: 440px) {
+  main {
+    padding-top: 6rem;
+  }
+
+  .text-container {
+    h3 {
+      font-size: 1em;
+    }
+
+    h1 {
+      font-size: 6em;
+    }
+
+    h4 {
+      font-size: 1.5em;
     }
   }
 }
