--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -8,7 +8,7 @@ main {
   width: 80%;
   height: 800px;
   display: flex;
-  padding-top: 7rem;
+  align-items: center;
   flex: 1;
   background-color: #fff;
   margin: 0 auto;
@@ -66,19 +66,34 @@ main {
 }
 
 @media screen and (max-width: 1560px) {
-  main {
-    padding-top: 11rem;
-  }
+  .text-container {
+    h3 {
+      font-size: 2em;
+    }
 
+    h1 {
+      font-size: 7em;
+    }
+
+    span {
+      display: block;
+    }
+    h4 {
+      font-size: 2em;
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
   .image-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 350px;
-    height: 350px;
-    position: absolute;
-    top: 15%;
-    right: 10%;
+    width: 250px;
+    height: 250px;
+    position: fixed;
+    top: 5%;
+    right: 8%;
     box-shadow: 0px 5px 30px -15px rgba(0, 0, 0, 0.8);
     border-radius: 50%;
     z-index: 1;
@@ -90,105 +105,14 @@ main {
   }
 }
 
-@media screen and (max-width: 1360px) {
+@media screen and (max-width: 920px) {
   main {
-    padding-top: 15rem;
-  }
-
-  .text-container {
-    h3 {
-      font-size: 2.2em;
-    }
-
-    h1 {
-      font-size: 8em;
-    }
-
-    span {
-      display: block;
-    }
-
-    h4 {
-      font-size: 2.4em;
-    }
-  }
-
-  .image-container {
-    width: 340px;
-    height: 340px;
-  }
-}
-
-@media screen and (max-width: 1080px) {
-  main {
-    padding-top: 15rem;
-  }
-
-  .text-container {
-    h3 {
-      font-size: 1.8em;
-    }
-
-    h1 {
-      font-size: 7.6em;
-    }
-
-    span {
-      display: block;
-    }
-
-    h4 {
-      font-size: 2em;
-    }
-  }
-
-  .image-container {
-    width: 300px;
-    height: 300px;
-  }
-}
-
-@media screen and (max-width: 960px) {
-  .image-container {
-    width: 220px;
-    height: 220px;
-  }
-}
-
-@media screen and (max-width: 820px) {
-  .image-container {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 560px) {
-  main {
-    padding-top: 10rem;
+    align-items: flex-start;
   }
 
   .text-container {
     h3 {
       font-size: 1.6em;
-    }
-
-    h1 {
-      font-size: 7.2em;
-    }
-
-    h4 {
-      font-size: 1.6em;
-    }
-  }
-}
-
-@media screen and (max-width: 490px) {
-  main {
-    padding-top: 8rem;
-  }
-
-  .text-container {
-    h3 {
-      font-size: 1.3em;
     }
 
     h1 {
@@ -196,27 +120,70 @@ main {
     }
 
     h4 {
-      font-size: 1.3em;
+      font-size: 1.6em;
+    }
+  }
+
+  .image-container {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  main {
+    height: 600px;
+
+    .text-container {
+      justify-content: flex-start;
+      padding-top: 2rem;
+    }
+  }
+
+  .text-container {
+    h3 {
+      font-size: 1.4em;
+    }
+
+    h1 {
+      font-size: 5.6em;
+    }
+
+    h4 {
+      font-size: 1.4em;
+    }
+  }
+
+  .image-container {
+    width: 160px;
+    height: 160px;
+  }
+}
+
+
+@media screen and (max-width: 560px) {
+  .image-container {
+    width: 120px;
+    height: 120px;
+
+    img {
+      width: 100%;
     }
   }
 }
 
-@media screen and (max-width: 440px) {
-  main {
-    padding-top: 6rem;
-  }
-
-  .text-container {
+@media screen and (max-width: 480px) {
+ .text-container {
     h3 {
       font-size: 1em;
     }
 
     h1 {
-      font-size: 6em;
+      font-size: 5em;
     }
 
     h4 {
-      font-size: 1.5em;
+      font-size: 1em;
     }
   }
 }
