--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -1,7 +1,3 @@
-.hamburger-box {
-  display: none;
-}
-
 nav {
   width: 80%;
   height: 80px;
@@ -44,14 +40,21 @@ nav {
 
 // Responisve styles
 @media screen and (max-width: 1560px) {
+  .hamburger-box {
+    width: 80%;
+    height: 80px;
+    margin: auto;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
   .hamburger-icon {
     display: flex;
     flex-direction: column;
-    width: 55px;
+    width: 35px;
     position: fixed;
-    top: 0;
-    right: 0;
-    margin: 3rem 10% 0;
     z-index: 5;
 
     &:hover {
@@ -60,9 +63,9 @@ nav {
 
     .line {
       width: 100%;
-      height: 5px;
+      height: 2px;
       background-color: #37474f;
-      margin-bottom: 10px;
+      margin-bottom: 9px;
     }
   }
 
@@ -76,7 +79,7 @@ nav {
     flex-direction: column;
     justify-content: space-around;
     background-color: #ffe57f;
-    clip-path: circle(20px at 95% -10%);
+    clip-path: circle(20px at 0% -10%);
     transition: all 0.9s ease-in;
     z-index: 4;
 
