--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -77,7 +77,7 @@ nav {
     left: 0;
     margin-top: 0;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background-color: #ffe57f;
     clip-path: circle(20px at 0% -10%);
     transition: all 0.9s ease-in;
@@ -104,6 +104,34 @@ nav {
 
       .nav-link {
         opacity: 1;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  nav {
+    .nav-link {
+      a {
+        font-size: 1.5em;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .hamburger-icon {
+    width: 30px;
+
+    .line {
+      height: 1px;
+    }
+  }
+
+  nav {
+    .nav-link {
+      a {
+        font-size: 1em;
       }
     }
   }
