--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,32 +4,34 @@
 // Pink-Shade: #FF5252,
 // Yellow-Shade: #FFE57F
 
-main {
-  width: 80%;
-  height: 800px;
-  display: flex;
-  align-items: center;
-  flex: 1;
-  background-color: #fff;
-  margin: 0 auto;
+header {
+  width: 100%;
+  height: 650px;
+
+  main {
+    width: 80%;
+    display: flex;
+    background-color: #fff;
+    margin: auto;
+    margin-top: 120px;
+  }
 }
 
 .text-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   flex: 2;
-  height: 500px;
 
   h3 {
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 300;
     letter-spacing: 5px;
     color: #37474f;
   }
 
   h1 {
-    font-size: 8.5em;
+    font-size: 7em;
     color: #1565c0;
     margin: 2rem 0;
     letter-spacing: 5px;
@@ -40,7 +42,7 @@ main {
   }
 
   h4 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 300;
     letter-spacing: 7px;
     color: #37474f;
@@ -160,7 +162,6 @@ main {
   }
 }
 
-
 @media screen and (max-width: 560px) {
   .image-container {
     width: 120px;
@@ -173,7 +174,7 @@ main {
 }
 
 @media screen and (max-width: 480px) {
- .text-container {
+  .text-container {
     h3 {
       font-size: 1em;
     }
