--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -43,7 +43,7 @@ main {
   height: 500px;
 
   img {
-    width: 550px;
+    width: 100%;
     height: 100%;
   }
 }
@@ -81,7 +81,7 @@ main {
     position: fixed;
     top: 5%;
     right: 8%;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0px 5px 30px -15px rgba(0, 0, 0, 0.8);
     border-radius: 50%;
     z-index: 1;
@@ -108,5 +108,27 @@ main {
     img {
       width: 100%;
     }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  main {
+    margin-top: 2rem;
+  }
+
+  .text-container {
+    h2 {
+      letter-spacing: 5px;
+    }
+  }
+
+  .image-container {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 480px) {
+  .image-container {
+    display: none;
   }
 }
