--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -1,35 +1,65 @@
 section {
   width: 100%;
   height: 500px;
-  padding-top: 10rem;
-  background-color: hsl(48, 100%, 80%);
-
-  .about {
-    width: 80%;
-    height: 100%;
-    margin: auto;
-  }
 }
 
-.title {
+article {
+  position: relative;
+  overflow: hidden;
+  width: 70%;
+  height: 80%;
+  padding: 3rem;
+  background-color: hsl(48, 100%, 82%);
+  box-shadow: 0px 1px 20px -5px rgba(0, 0, 0, 0.4);
+  margin: auto;
+
   h1 {
-    font-size: 2.5em;
+    text-align: center;
+    font-size: 2.5rem;
     color: #37474f;
   }
-
-  div {
-    width: 150px;
-    height: 10px;
-    background-color: #ff5252;
-  }
-}
-
-.content {
-  margin-top: 2rem;
 
   p {
-    font-size: 1.2em;
+    position: relative;
+    margin-top: 2rem;
+    font-size: 1.15rem;
     color: #37474f;
     line-height: 2em;
+    letter-spacing: 0.1rem;
+    z-index: 1;
+  }
+
+  img {
+    position: absolute;
+    z-index: 0;
+
+    &.shape-one {
+      top: -20%;
+      left: -10%;
+      width: 23%;
+      opacity: 0.5;
+    }
+
+    &.shape-two {
+      top: 75%;
+      right: 10%;
+      width: 4%;
+      opacity: 0.5;
+    }
+
+    &.shape-three {
+      top: 75%;
+      right: -5%;
+      width: 20%;
+      opacity: 0.5;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  article {
+    img {
+      display: none;
+    }
   }
 }
