--- a/src/components/about/about.styles.scss
+++ b/src/components/about/about.styles.scss
@@ -1,19 +1,22 @@
 section {
   width: 100%;
-  height: 500px;
+  margin: 6rem 0 10rem 0;
 }
 
 article {
   position: relative;
   overflow: hidden;
   width: 70%;
-  height: 80%;
+  max-height: 100%;
   padding: 3rem;
   background-color: hsl(48, 100%, 82%);
+  border: none;
+  border-radius: 1rem;
   box-shadow: 0px 1px 20px -5px rgba(0, 0, 0, 0.4);
   margin: auto;
+  transition: all 1s;
 
-  h1 {
+  h2 {
     text-align: center;
     font-size: 2.5rem;
     color: #37474f;
@@ -54,12 +57,50 @@ article {
       opacity: 0.5;
     }
   }
+
+  &:hover {
+    cursor: pointer;
+    transform: translateY(-20px);
+  }
 }
 
+// Responsive styles
 @media (max-width: 1280px) {
   article {
     img {
       display: none;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  article {
+    p {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  article {
+    width: 85%;
+
+    p {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  article {
+    width: 95%;
+
+    h2 {
+      font-size: 1.6rem;
+    }
+
+    p {
+      font-size: 0.7rem;
     }
   }
 }
