--- a/src/components/navbar/navbar.styles.scss
+++ b/src/components/navbar/navbar.styles.scss
@@ -60,7 +60,7 @@ nav {
     width: 80%;
     height: 80px;
     margin: auto;
-    margin-top: 1rem;
+    margin-top: 2rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -69,7 +69,15 @@ nav {
   .hamburger-icon {
     display: flex;
     flex-direction: column;
-    width: 35px;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 65px;
+    height: 65px;
+    padding: 0.8rem 0;
+    background-color: rgba(255, 255, 255, 0.815);
+    border: none;
+    border-radius: 50%;
+    box-shadow: 0px 1px 20px -5px rgba(0, 0, 0, 0.4);
     position: fixed;
     z-index: 5;
 
@@ -78,10 +86,9 @@ nav {
     }
 
     .line {
-      width: 100%;
+      width: 32px;
       height: 2px;
       background-color: $greyshade;
-      margin-bottom: 9px;
     }
   }
 
